# CSC7300-Project

./: CMakeLists.txt  run_mesh_simplification.sh
src/: main.cpp
src/algorithms/: vertex_clustering.cpp  vertex_clustering.hpp
src/mesh/: mesh.cpp  mesh.hpp
src/utils/: file_io.cpp  file_io.hpp
src/visualization/: camera.hpp
